# robust-nids

./: .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  .secrets.baseline  01_eda.ipynb  02_sampling.ipynb  03_preprocessing.ipynb  04_baseline_model_training.ipynb  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  general.yml  issue.yml
.github/workflows/: ci.yml  test.yml
backend/: .dockerignore  .env.example  .env.test.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 086d416c160b_add_verified_at_for_phone_and_email.py  09b2f0d7d240_add_timezone_awareness.py  2f4fc3d2e31b_add_alert_table.py  65b5fef69979_add_reports_table.py  6cbdeccc0909_add_robustness_reports_table.py  761fb78e480a_initial.py  8891f2a504bb_add_flow_data_column_to_alerts_table.py  a50258190476_add_mfa_recovery_fields_to_user_model.py  adb4f4954c67_add_email_verification_and_password_.py
backend/api/: dependencies.py  main.py  middleware.py
backend/api/exception_handlers/: __init__.py  email.py  mfa.py  user.py
backend/api/routers/: auth.py  mfa.py  nids.py  reports.py  roles.py  training.py  users.py
backend/api/schemas/: auth.py  mfa.py  permissions.py  roles.py  users.py
backend/api/services/: auth_service.py
backend/app/core/: config.py
backend/app/database/: db.py  models.py
backend/app/database/seeders/: permissions.py  role_permissions.py  users.py
backend/app/tests/tests/: test_auth.py
backend/core/: auth_backend.py  cache.py  config.py  dependencies.py  logging.py  security.py
backend/database/: db.py  models.py  seed.py
backend/database/repositories/: alert.py  base.py  permission.py  report.py  role.py  user.py
backend/database/seeders/: __init__.py  base.py  manager.py  permissions.py  robustness_reports.py  role_permissions.py  roles.py  users.py
backend/ml/: inference.py
backend/ml/models/: adversarial.py  explain.py  loader.py  predict.py
backend/ml/models/artifacts/: README.md
backend/schemas/: adversarial.py  auth.py  email.py  mfa.py  nids.py  permissions.py  reports.py  roles.py  users.py
backend/scripts/: capture_live_flow.sh  entrypoint.sh  generate_dataset.sh  get_json_sample.sh  live_monitor.sh  process_pcaps.sh  prune_alerts.sh  reset_alerts.sh  run_inference.sh  seed_database.py  setup_db.sh  setup_test_db.sh  test_ids_complete.sh
backend/scripts/demo/: run_bruteforce.sh  run_dos.sh  run_port_scan.sh
backend/scripts/traffic_capture/: capture_live_flow.sh  capture_malicious_flow.sh  capture_sample_flow.sh
backend/services/: alert_service.py  auth_service.py  email_service.py  mfa_service.py  report_service.py  role_service.py  token_service.py  totp_service.py  user_service.py
backend/services/exceptions/: alert.py  base.py  email.py  mfa.py  role.py  user.py
backend/templates/email/: account_activation.html  account_deactivation.html  critical_alert.html  email_verification.html  email_verification_complete.html  mfa_recovery.html  mfa_recovery_complete.html  new_user_registration.html  password_changed.html  password_reset.html  user_account_activated.html  user_account_deactivated.html  user_account_updated.html  user_registration_confirmation.html
backend/tests/: conftest.py  live_predictions_check.py  test_auth.py  test_email_verification.py  test_email_verification_and_reset.py  test_login.py  test_mfa.py  test_password_reset.py  test_roles.py  test_user.py  utils.py
backend/utils/: constants.py  enums.py  extract_pcap.py  live_preprocessor.py  prune_alerts.py
core/: app_state.py  config.py  instances.py  mfa.py  mfa_manager.py  session.py  session_manager.py  singleton.py
database/: __init__.py  db.py  models.py
database/seeders/: __init__.py  manager.py  permissions.py  role_permissions.py  roles.py  users.py
docs/: SETUP.md  TECHNICAL_REPORT.md
frontend/: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: LogoutConfirmDialog.tsx  Pagination.tsx  UserSelector.tsx
frontend/src/hooks/: useNids.ts  (+5 more)
notebooks/: 01_eda.ipynb  02_sampling.ipynb  03_preprocessing.ipynb  04_baseline_model_training.ipynb  05_adversarial_model_training.ipynb  README.md
pages/: __init__.py  alerts.py  data_explorer.py  model_management.py  overview.py
scripts/: build-dev.sh  download_data.py  migrate.py  seed_database.py  setup_db.sh
services/: auth.py  permissions.py  roles.py
tests/: test_auth_service.py  test_auth_sessions.py
ui/components/: login.py  login_page.py  mfa.py  mfa_page.py  totp_dialog.py  user_profile.py
utils/: auth.py  constants.py  permissions.py  rbac.py  roles.py
views/: __init__.py  alerts.py  analytics.py  data_explorer.py  live_monitor.py  model_management.py  overview.py  settings.py  user_profile.py
(+69 files in other folders)
