[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robust-nids"
version = "0.1.0"
description = "Robust NIDS Application"
requires-python = ">=3.12"

dependencies = [
    "numpy>=2.3,<3.0",
    "pandas>=2.3,<3.0",
    "scipy>=1.16,<2.0",
    "scikit-learn>=1.7,<2.0",
    "matplotlib>=3.10,<4.0",
    "seaborn>=0.13,<1.0",
    "tensorflow>=2.20,<3.0",
    "keras>=3.11,<4.0",
    "xgboost>=3.0,<4.0",
    "adversarial-robustness-toolbox>=1.20,<2.0",
    "altair>=5.5,<6.0",
    "plotly>=6.3,<7.0",
    "pyarrow>=21.0,<22.0",
    "SQLAlchemy>=2.0,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "alembic>=1.14,<2.0",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "pydantic[email,timezone]>=2.11,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "slowapi>=0.1.9,<1.0",
    "requests>=2.32,<3.0",
    "python-dotenv>=1.0,<2.0",
    "PyJWT>=2.10,<3.0",
    "pyotp>=2.9,<3.0",
    "qrcode[pil]>=8.2,<9.0",
    "bcrypt==5.0.0",
    "python-multipart>=0.0.20,<1.0",
    "redis>=6.4.0",
    "fastapi-mail>=1.5.6",
]

[dependency-groups]
dev = [
    "ruff>0.13.3,<1.0",
    "pre-commit>=4.3,<5.0",
    "mypy>=1.0,<2.0",
    "detect-secrets>=1.5.0",
]
test = [
    "pytest>=8.0,<10.0",
    "pytest-cov>=4.0,<5.0",
    "httpx>=0.28.1,<1.0",
]

[tool.ruff]
line-length = 110
exclude = ["*.ipynb", "notebooks/*"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C90"]
ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.setuptools.packages.find]
where = ["."]
include = ["api", "core", "database", "ml", "schemas", "scripts", "services", "utils"]
